Background on mobile FIX

--- a/custom.css
+++ b/custom.css
@@ -9,7 +9,7 @@ h3{
     color: white;
     text-shadow: 0px 0px 10px black;
 }
-html { 
+body { 
   background: url(bg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
